--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@ html {
 }
 
 .container-navbar {
-    background-color:  brown;
+    background-color:  black;
     width: 100%;
-    height: 100px;
+    height: 10vh;
 }
 
 .ul-navbar {
@@ -25,32 +25,57 @@ html {
     font-size: 30px;
 }
 
-.container-content {
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.li-navbar:hover {
+    background-color: rebeccapurple;
+    transition: .5s ease-in-out;
+    transition-delay: .3s;
+    border-radius: 10px;
 }
 
-.container-content1 {
-    background-color: black;
+.a-navbar {
+    color: white;
+    text-decoration: none;
+    font-weight: 800;
+} 
+
+.container-content {
+    background-color: #f7f7f7;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 80vh;
+}
+
+.a-content {
+   background-color: white;
+   color: black;
+   text-decoration: none;
+   font-size: 30px;
+   width: 720px;
+   height: 480px;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-evenly;
+   align-items: center;
+   border-radius: 80px;
+   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
 
 .img-content {
-    width: 10%;
-    height: 10%;
+    width: 50%;
+    height: 50%;
 }
 
 .img-content1 {
-    width: 10%;
-    height: 10%;
+    width: 50%;
+    height: 50%;
 }
 
 .container-footer {
-    background-color: brown;
+    height: 10vh;
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -58,4 +83,5 @@ html {
 
 .h1-footer {
     font-size: 40px;
+    color: white;
 }
